# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip.cpp  chip.h  graphics.h  main.cpp
